fix: improve spacing

--- a/styles/output.css
+++ b/styles/output.css
@@ -22,6 +22,8 @@
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
     --radius-lg: 0.5rem;
+    --radius-2xl: 1rem;
+    --radius-3xl: 1.5rem;
     --radius-4xl: 2rem;
     --blur-sm: 8px;
     --default-transition-duration: 150ms;
@@ -203,6 +205,12 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-0\.5 {
+    top: calc(var(--spacing) * 0.5);
+  }
+  .top-\[50\%\] {
+    top: 50%;
+  }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
@@ -248,17 +256,26 @@
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
+  .h-16 {
+    height: calc(var(--spacing) * 16);
+  }
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
   .h-30 {
     height: calc(var(--spacing) * 30);
   }
+  .h-\[18\] {
+    height: 18;
+  }
   .h-full {
     height: 100%;
   }
   .h-screen {
     height: 100vh;
+  }
+  .w-16 {
+    width: calc(var(--spacing) * 16);
   }
   .w-20 {
     width: calc(var(--spacing) * 20);
@@ -269,14 +286,23 @@
   .w-48 {
     width: calc(var(--spacing) * 48);
   }
+  .w-\[18\] {
+    width: 18;
+  }
   .w-\[400px\] {
     width: 400px;
   }
   .w-full {
     width: 100%;
   }
+  .min-w-16 {
+    min-width: calc(var(--spacing) * 16);
+  }
   .min-w-20 {
     min-width: calc(var(--spacing) * 20);
+  }
+  .min-w-\[18\] {
+    min-width: 18;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -299,26 +325,32 @@
   .items-center {
     align-items: center;
   }
-  .items-stretch {
-    align-items: stretch;
-  }
   .justify-around {
     justify-content: space-around;
   }
   .justify-center {
     justify-content: center;
   }
-  .gap-1 {
-    gap: calc(var(--spacing) * 1);
+  .justify-items-stretch {
+    justify-items: stretch;
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
+  .justify-self-center {
+    justify-self: center;
+  }
+  .justify-self-start {
+    justify-self: flex-start;
   }
   .overflow-hidden {
     overflow: hidden;
+  }
+  .rounded-2xl {
+    border-radius: var(--radius-2xl);
+  }
+  .rounded-3xl {
+    border-radius: var(--radius-3xl);
   }
   .rounded-4xl {
     border-radius: var(--radius-4xl);
@@ -382,9 +414,6 @@
   .object-cover {
     object-fit: cover;
   }
-  .p-1 {
-    padding: calc(var(--spacing) * 1);
-  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
@@ -397,8 +426,11 @@
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
-  .pr-5 {
-    padding-right: calc(var(--spacing) * 5);
+  .pr-3 {
+    padding-right: calc(var(--spacing) * 3);
+  }
+  .pl-3 {
+    padding-left: calc(var(--spacing) * 3);
   }
   .text-center {
     text-align: center;
